账户信息列表增加电费余额字段